fix layout; update body margin for improved spacing

--- a/style.css
+++ b/style.css
@@ -157,6 +157,8 @@ body
     border-radius:50%;
     overflow:hidden;
     background:#111827;
+    margin: 30px;
+    
 }
 .pfp
 {
